# CmakePlayground

./: CMakeLists.txt  CMakePresets.json
cmake/: Config.cmake  Functions.cmake
embedded/: CMakeLists.txt  embedded.cpp  embedded.h  embedded.pgs
embedded/include/embedded/: embedded.h
embedded/src/: embedded.cpp  embedded.pgs
main/: CMakeLists.txt  main.cpp
